<resources>
    <string name="app_name">TourWala</string>
    <string name="app_logo">app_logo</string>
    <string name="logoname">logo_name</string>
    <string name="idforlogoname">Id_for_logo_name</string>
    <string name="taglineoftourwala">A Smart Tourist Guide</string>
    <string name="Welcome">Welcome</string>
    <string name="SignUp_to_start_your_new_Journey">SignUp to start your new Journey</string>
    <string name="Welcometv">Welcome</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="google_map_key">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="find">Find</string>
    <string name="BookingAirport">Ticket Booking and Airports</string>
    <string name="airplane">Airplane</string>
    <string name="welcome_user">Welcome user</string>
    <string name="traveling">Traveling</string>
    <string name="start_a_new_journey">Start a new Journey</string>
    <string name="main_top_image">main_top_image</string>
    <string name="walking">Walking</string>
    <string name="boating">Boating</string>
    <string name="boating_home">boating</string>
    <string name="bus">Bus</string>
    <string name="todo">TODO</string>
    <string name="train">Train</string>
    <string name="cycle">cycle</string>
    <string name="hotel">Hotel</string>
    <string name="restaurants">Restaurants</string>
    <string name="hospital">Hospital</string>
    <string name="atm">ATM</string>
    <string name="hill_stations">Hill Stations</string>
    <string name="bank">Bank</string>
    <string name="food">Food</string>
    <string name="medical">Medical</string>
    <string name="booking_hotel">Hotel booking and nearby hotels</string>
    <string name="book_your_hotel">Book your Hotel</string>
    <string name="see_nearby_hotels">See Nearby Hotels</string>
    <string name="about_paragraph"></string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


</resources>