<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hotelbook">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gagalin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/booking_hotel"
            android:textColor="@color/black"
            android:textSize="40sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:padding="-20dp"
            android:src="@drawable/bookhotel" />

        <Button
            android:id="@+id/buttonBookHotel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/gagalin"
            android:text="@string/book_your_hotel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonHotels"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/gagalin"
            android:text="@string/see_nearby_hotels"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>