<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_form"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#fff">


    <ImageView
        android:id="@+id/logo_image_transparent"
        android:layout_width="191dp"
        android:layout_height="227dp"
        android:layout_marginStart="-41dp"
        android:contentDescription="@string/app_logo"
        android:layout_marginTop="-60dp"
        android:src="@drawable/tour_wala_logo_transparent"
        android:layout_marginLeft="-41dp"
        android:transitionName="logo_image"
        />


    <TextView
        android:id="@+id/id_for_logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="40sp"
        android:textColor="#000"
        android:fontFamily="@font/gagalin"
        android:layout_marginTop="-40dp"
        android:transitionName="logo_text"
        />

    <TextView
        android:id="@+id/slogan_name_for_logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp_to_start_your_new_Journey"
        android:textSize="18sp"
        android:transitionName="logo_desc"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/full_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Full Name"-->
<!--            android:transitionName="fullname_tran"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text"-->
<!--                />-->


<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:transitionName="username_tran"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:transitionName="email_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/phone_no"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Phone No"-->
<!--            android:transitionName="phone_tran"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="number"-->
<!--                />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            app:passwordToggleEnabled="true"
            android:transitionName="cnfpassword_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:background="#000"
        android:textColor="#fff"
        />

    <Button
        android:id="@+id/already_have_account_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account? LogIn"
        android:background="#00000000"
        android:textColor="#000"
        android:transitionName="login_signup_tran"/>

</LinearLayout>
</ScrollView>